[project]
name = "chialisp_loader"
description = "Provides `load_puzzle` which dynamic rebuilds if `chialisp_builder` is available."
authors = [{name = "Richard Kiss", email = "him@richardkiss.com"}]
license = {file = "LICENSE"}
readme = "README.md"
version = "0.1.2"
dependencies = ["clvm_rs", "importlib_resources"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
